data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3657.wast
;; 6. **Test Description**: Function that recursively calls itself, ensuring proper stack depth management.    - **Constraint Checked**: Ensures proper handling of recursive calls without corrupting the stack.    - **Improper Handling**: Verifies that stack overflow conditions or recursive depth mismanagement does not occur.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $recursive (param i32) (result i32)
      (local.get 0)
      (call $recursive)
    )
  )
  "stack overflow or recursion depth"
)